--- a/app/views/users_index.hbs
+++ b/app/views/users_index.hbs
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    {{!--
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script> --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
@@ -47,17 +49,69 @@
     <div class="container" style="margin-top:30px">
         <div class="row">
             <div class="col-sm-4">
-                <p>왼쪽 메뉴</p>
+                <form id="users_form" method="POST">
+                    <div class="form-group">
+                        <label for="firstName">firstName</label>
+                        <input type="text" class="form-control" name="firstName" placeholder="firstName">
+                    </div>
+                    <div class="form-group">
+                        <label for="lastName">lastName</label>
+                        <input type="text" class="form-control" name="lastName" placeholder="lastName">
+                    </div>
+                    <button type="submit" id="submit_btn" class="btn btn-primary">Submit</button>
+                </form>
             </div>
-            <div class="col-sm-8">
-                {{#each users}}
-                <p>
-                    <span> {{ firstName }} </span> - <span>{{ lastName }} Shekels </span>
-                </p>
-                {{/each}}
+            <div class="col-sm-8" id="users_list">
             </div>
         </div>
     </div>
+
+    <script>
+        get = () => {
+            $.ajax({
+                type: 'GET',
+                url: `/users`,
+                dataType: 'json',
+                success: function (data) {
+                    var text = '<table class="table">';
+                        text += `<tr>`;
+                        text += `<td>id</td>`;
+                        text += `<td>firstName</td>`;
+                        text += `<td>lastName</td>`;
+                        text += `</tr>`;
+                    for (var i = 0; i < data.length; i++) {
+                        text += `<tr>`;
+                        text += `<td>${data[i].id}</td>`;
+                        text += `<td>${data[i].firstName}</td>`;
+                        text += `<td>${data[i].lastName}</td>`;
+                        text += `</tr>`;
+                    }
+                    text += `</table>`;
+                    $('#users_list').empty();
+                    $('#users_list').append(text);
+                },
+            });
+        }
+        save = () => {
+            $.ajax({
+                type: 'POST',
+                url: `/users`,
+                dataType: 'json',
+                data: $("#users_form").serialize(),
+                success: function (data) {
+                    console.log(data);
+                    get();
+                },
+            });
+        }
+        $(document).on('click', '#submit_btn', function (e) {
+            e.preventDefault();
+            save();
+        });
+        get();
+
+
+    </script>
 
     <div class="jumbotron text-center" style="margin-bottom:0">
         <p>Footer</p>
