--- a/app/views/users_index.hbs
+++ b/app/views/users_index.hbs
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
     <style>
         .fakeimg {
             height: 200px;
@@ -49,7 +50,7 @@
     <div class="container" style="margin-top:30px">
         <div class="row">
             <div class="col-sm-4">
-                <form id="users_form" method="POST">
+                <form id="users_form" method="POST" action="javascript:;">
                     <div class="form-group">
                         <label for="firstName">firstName</label>
                         <input type="text" class="form-control" name="firstName" placeholder="firstName">
@@ -66,57 +67,55 @@
         </div>
     </div>
 
-    <script>
-        get = () => {
-            $.ajax({
-                type: 'GET',
-                url: `/users`,
-                dataType: 'json',
-                success: function (data) {
-                    var text = '<table class="table">';
-                        text += `<tr>`;
-                        text += `<td>id</td>`;
-                        text += `<td>firstName</td>`;
-                        text += `<td>lastName</td>`;
-                        text += `</tr>`;
-                    for (var i = 0; i < data.length; i++) {
-                        text += `<tr>`;
-                        text += `<td>${data[i].id}</td>`;
-                        text += `<td>${data[i].firstName}</td>`;
-                        text += `<td>${data[i].lastName}</td>`;
-                        text += `</tr>`;
-                    }
-                    text += `</table>`;
-                    $('#users_list').empty();
-                    $('#users_list').append(text);
-                },
-            });
-        }
-        save = () => {
-            $.ajax({
-                type: 'POST',
-                url: `/users`,
-                dataType: 'json',
-                data: $("#users_form").serialize(),
-                success: function (data) {
-                    console.log(data);
-                    get();
-                },
-            });
-        }
-        $(document).on('click', '#submit_btn', function (e) {
-            e.preventDefault();
-            save();
-        });
-        get();
-
-
-    </script>
-
     <div class="jumbotron text-center" style="margin-bottom:0">
         <p>Footer</p>
     </div>
 
+    <script>
+        class UserList {
+            draw(data) {
+                var text = '<table class="table">';
+                text += `<tr>`;
+                text += `<td>id</td>`;
+                text += `<td>firstName</td>`;
+                text += `<td>lastName</td>`;
+                text += `</tr>`;
+                for (var i = 0; i < data.length; i++) {
+                    text += `<tr>`;
+                    text += `<td>${data[i].id}</td>`;
+                    text += `<td>${data[i].firstName}</td>`;
+                    text += `<td>${data[i].lastName}</td>`;
+                    text += `</tr>`;
+                }
+                text += `</table>`;
+                $('#users_list').empty();
+                $('#users_list').append(text);
+            }
+            async get() {
+                let res = await axios.get(`/users`);
+                return res.data;
+            }
+            async getAndDraw() {
+                const res = await this.get(`/users`);
+                this.draw(res);
+            }
+            async save() {
+                const postData = $("#users_form").serialize();
+                await axios.post('/users', postData);
+                await this.getAndDraw();
+                $("#users_form").find('[type="text"]').val('');
+            }
+        }
+
+        (async () => {
+            const userList = new UserList();
+            await userList.getAndDraw();
+
+            $(document).on('click', '#submit_btn', () => {
+                userList.save();
+            });
+        })()
+    </script>
 </body>
 
 </html>
