--- a/app/views/users_index.hbs
+++ b/app/views/users_index.hbs
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/guide">Guide</a>
+                    <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -74,6 +74,7 @@
     <script>
         class UserList {
             draw(data) {
+                data.reverse();
                 var text = '<table class="table">';
                 text += `<tr>`;
                 text += `<td>id</td>`;
@@ -88,8 +89,7 @@
                     text += `</tr>`;
                 }
                 text += `</table>`;
-                $('#users_list').empty();
-                $('#users_list').append(text);
+                $('#users_list').empty().append(text);
             }
             async get() {
                 let res = await axios.get(`/users`);
